fix issue where archived tools are surfaced via mcp
